<?xml version="1.0"?>
<package format="3">
  <name>tracking_ros</name>
  <version>0.0.1</version>
  <description>Tracking ROS package</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
