<?xml version="1.0"?>
<package format="3">
  <name>tracking_ros_utils</name>
  <version>0.0.1</version>
  <description>Util ROS package for Tracking ROS</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>jsk_rqt_plugins</exec_depend>

</package>
